<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_main">New Assignments</string>
    <string name="app_name">Shukudai</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="take_upload_photo">Take and Upload Photo</string>
    <string name="title_activity_post_assignment">New Assignment</string>
    <string name="menu_log_out">Log out</string>
    <string name="refresh_news_feed">Refresh</string>
    <string name="post_new_assignment_camera">Attach Photo</string>
    <string name="description_examples">Examples:\n\n\t→p.101: 1&#8211;3, 7&#8211;21 odd\n\t→Read up on preterite tense before trying this worksheet</string>
    <string name="header_description">Description (Optional)</string>
    <string name="header_photo">Photograph</string>
    <string name="take_photo_button">Take Photograph of Assignment</string>
    <string name="header_due_date">Due Date</string>
    <string name="post_new_assignment">New Assignment</string>
    <string name="title_activity_assignment">AssignmentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_new_school_class">New Class</string>
    <string name="menu_manage_school_classes">Manage Classes</string>
    <string name="action">Perform action</string>
    <string name="undobar_sample_message">Action performed.</string>
    <string name="undo">Undo</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="empty_text">No unfinished assignments!</string>
    <string name="empty_text_detailed">No new assignments!</string>
    <string name="empty_add_assignment">Add New Assignment</string>
    <string name="empty_add_class">Add New Class</string>
    <string name="title_activity_manage_school_class">Manage Classes</string>
    <string name="example_school_class_title">Title (ex: P1 AP Chemistry):</string>

</resources>