<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/post_new_assignment"
        android:icon="@drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/post_new_assignment"/>
    <item
        android:id="@+id/add_new_school_class"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/add_new_school_class"/>
    <item
        android:id="@+id/menu_manage_school_classes"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_manage_school_classes"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_about"/>

</menu>